--- a/answers/1.6
+++ b/answers/1.6
@@ -1,3 +1,2 @@
 docker login
-docker tag mlops:latest marinheckmann/mlops:latest
-docker push marinheckmann/mlops:latest
+docker push tiberiozz/mlops:latest
