--- a/answers/1.5
+++ b/answers/1.5
@@ -1,1 +1,1 @@
-docker run -p 5000:5000 -e ENVIRONMENT=production mlops:latest
+docker run -it --name mlops -p 5000:5000 -e ENVIRONMENT=development mlops:latest
